--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hola mundo!</h1>
+    <main>
+        <div class="box1">
+            <h1>Box 1</h1>
+        </div>
+        <div class="box2">
+            <h1>Box 2</h1>
+        </div>
+        <div class=""box3>
+            <h1>Box 3</h1>
+        </div>
+    </main>
 </body>
 </html>
