--- a/index.html
+++ b/index.html
@@ -9,14 +9,50 @@
 </head>
 <body>
     <main>
-        <div class="box1">
-            <h1>Box 1</h1>
+            <div class="box4">
+                <h2>
+                    Fill your blog with engaging articles.
+                </h2>
+                <p>
+                    Publish to your blog in less time than it takes to drink your morning coffee.
+                </p>
+                <button>
+                    Publish instantly
+                </button>
+            </div>
+            <div class="box5">
+                <h2>
+                    Attract and engage more website visitors.
+                </h2>
+                <p>
+                    Enhance your email, social media channels, and paid ads with content from Matcha.
+                </p>
+                <button>
+                    Get more site traffic
+                </button>
+            </div>
+            <div class="box6">
+                <h2>
+                    Capture more emails with locked content.
+                </h2>
+                <p>
+                    Convert 10x more of your traffic into subscribers and nurture them to a sale.
+                </p>
+                <button>
+                    Grow your emaillist after
+                </button>
+            </div>
         </div>
-        <div class="box2">
-            <h1>Box 2</h1>
-        </div>
-        <div class=""box3>
-            <h1>Box 3</h1>
+        <div class="box7">
+            <h2>
+                Optimize your blog’s performance.
+            </h2>
+            <p>
+                See what content delivers the most traffic, engagement, email subscribers, and sales.
+            </p>
+            <button>
+                See content's ROI
+            </button>
         </div>
     </main>
 </body>
