--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section class="fixed-header">
+        <header class="header">
+    <nav class="navbar">
+        <ul>
+            <li>Platform</li>
+            <li>Pricing</li>
+            <li>Customers</li>
+            <li>Blog</li>
+            <li>Resources</li>
+            <li>About</li>
+        </ul>
+    </nav>
+    <!-- Acciones -->
+    <div class="actions">
+        <a href="">Sign In</a>
+        <button>Start free trial</button>
+    </div>
+</header>
+</section>
     <main>
             <div class="box4">
                 <figure>
