--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <section class="fixed-header">
+<body>        
+    <!-- <section class="fixed-header">
         <header class="header">
     <nav class="navbar">
         <ul>
@@ -19,12 +19,12 @@
             <li>Resources</li>
             <li>About</li>
         </ul>
-    </nav>
+    </nav> -->
     <!-- Acciones -->
-    <div class="actions">
+    <!-- <div class="actions">
         <a href="">Sign In</a>
         <button>Start free trial</button>
-    </div>
+    </div> -->
 </header>
 </section>
     <main>
@@ -80,5 +80,38 @@
             </button>
         </div>
     </main>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                Test
+            </div>
+            <div class="col-4">
+                Test
+            </div>
+            <div class="col-4">
+                Test
+            </div>
+        </div>
+    </div>
+    </section>
+    <section>
+        <h1>Hello world</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    Test
+                </div>
+                <div class="col-4">
+                    Test
+                </div>
+                <div class="col-4">
+                    Test
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 </html>
