--- a/random.html
+++ b/random.html
@@ -6,18 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./random.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&family=Montserrat:wght@200;500&display=swap" rel="stylesheet">
     <title>Random</title>
 </head>
 <body>
+  <!-- Banner -->
     <section class="nav-bar">
         <div class="input">
+          <h1><strong>Recipes app</strong></h1>
+          <p>The best recipe browser</p> <br><br>
             <input type="text" placeholder="Search something delicious...">
-            <svg xmlns="http://www.w3.org/2000/svg" class="input-icon" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" style=" fill:#000000;"><path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="input-icon" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30"><path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path></svg>
             <button class="btn-search">
                 Search
             </button>
+            <div class="random-btn">
+              <p>Are you hungry? Try with a <a href="">random</a> recipe!</p>
+            </div>
         </div>
     </section>
+    <!-- Randome page -->
     <div class="back">
         <a href="">&larr;Back to index</a>
     </div>
@@ -75,7 +85,7 @@
             </div>
           </div>
         </div>
-        <div class="row" style="padding: 4rem 0 4rem 0;">
+        <div class="row">
             <div class="col">
               <div class="card" id="LXD">
                 <a class="card-img" href="">
